# ghost-path

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.txt  docker-compose.yml  exma-manual.md  ghostpath-spec-v4.md  railway.toml  todo.txt
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_o_edger_schema.py  003_add_locale.py  004_forge_state_snapshot.py  005_cascade_delete_fks.py  006_split_token_counters.py  007_add_cache_token_counters.py  008_rename_starred_to_resonated.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  error_handlers.py
backend/app/core/: __init__.py  context_compaction.py  detect_language.py  domain_types.py  enforce_claims.py  enforce_document.py  enforce_gates.py  enforce_language.py  enforce_phases.py  enforce_round.py  errors.py  forge_state.py  forge_state_snapshot.py  format_messages.py  format_messages_lifecycle.py  format_messages_pt_br.py  language_strings.py  phase_digest.py  phase_digest_crystallize.py  repository_protocols.py  research_digest.py  search_research.py  session_state.py  session_stats.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/infrastructure/: __init__.py  anthropic_client.py  database.py  observability.py
backend/app/models/: __init__.py  claim_edge.py  contradiction.py  cross_domain_analogy.py  evidence.py  knowledge_claim.py  premise.py  problem_reframing.py  round.py  session.py  tool_call.py
backend/tests/: conftest.py
(+158 files in other folders)
